--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,10 +22,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
 
-    - name: Run tests
-      run: |
+    #- name: Run tests
+    #  run: |
   
-        python -m unittest discover
+    #    python -m unittest discover
 
     - name: Package and upload to CodeArtifact
       env:
