--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Package application
         run: |
-          python setup.py sdist bdist_wheel
+      #    python setup.py sdist bdist_wheel
 
       - name: Publish to CodeArtifact
         run: |
