--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,11 +29,17 @@ jobs:
       # - name: Package application
       # run: |
       #    python setup.py sdist bdist_wheel
-      - name: Publish to AWS CodeArtifact
-        env:
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-            aws codeartifact login --tool pip --domain ${{ secrets.AWS_CODEARTIFACT_DOMAIN }} --domain-owner ${{ secrets.AWS_CODEARTIFACT_DOMAIN_OWNER }} --repository ${{ secrets.AWS_CODEARTIFACT_REPOSITORY }}
-            python -m twine upload --repository poc dist/*
+      - name: Configure AWS credentials 
+        uses: aws-actions/configure-aws-credentials@v1 
+        with: 
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+            aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+          
+      - name: Login to AWS CodeArtifact
+        run: aws codeartifact login --tool pip --domain questpoc --domain-owner 851725253190 --repository poc
+      - name: Build and publish package 
+        run: | 
+           python setup.py sdist bdist_wheel 
+           python -m twine upload --repository poc dist/*
+      
