--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,17 +36,18 @@ jobs:
             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
             aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
-      - name: Get CodeArtifact Token
-        id: codeartifact-token
-        run: |
-         export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain questpoc --domain-owner 851725253190 --query authorizationtoken --output text)
-         echo "::set-output name=token::$CODEARTIFACT_AUTH_TOKEN
+      #- name: Get CodeArtifact Token
+      #  id: codeartifact-token
+      #  run: |
+      #  export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain questpoc --domain-owner 851725253190 --query authorizationtoken --output text)
+      #   echo "::set-output name=token::$CODEARTIFACT_AUTH_TOKEN
       - name: Login to AWS CodeArtifact
-        run: aws codeartifact login --tool pip --domain questpoc --domain-owner 851725253190 --repository poc
+        run: aws codeartifact login --tool twine --domain questpoc --domain-owner 851725253190 --repository poc --region ap-south-1
+ 
       - name: Build and publish package 
         run: | 
            python setup.py sdist bdist_wheel 
            python -m twine upload --repository poc dist/*
-        env: 
-         TWINE_USERNAME: __token__ 
-         TWINE_PASSWORD: ${{ steps.codeartifact-token.outputs.token }}
+       # env: 
+       #  TWINE_USERNAME: __token__ 
+       #  TWINE_PASSWORD: ${{ steps.codeartifact-token.outputs.token }}
