--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -19,36 +20,24 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-      #   pip install -r requirements.txt
+          python -m pip install --upgrade pip   
+          #pip install -r requirements.txt
+          # Additional setup steps as needed
 
-      #- name: Run tests (if applicable)
-      #  run: |
-      #   pytest
+      - name: Build application
+        run: |
+            python setup.py sdist bdist_wheel  
+          # Commands to build your application
+          # For example, compiling code or bundling packages
 
-      # - name: Package application
-      # run: |
-      #    python setup.py sdist bdist_wheel
-      - name: Configure AWS credentials 
-        uses: aws-actions/configure-aws-credentials@v1 
-        with: 
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-            aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-
-      #- name: Get CodeArtifact Token
-      #  id: codeartifact-token
-      #  run: |
-      #  export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain questpoc --domain-owner 851725253190 --query authorizationtoken --output text)
-      #   echo "::set-output name=token::$CODEARTIFACT_AUTH_TOKEN
-      - name: Login to AWS CodeArtifact
-        run: aws codeartifact login --tool pip --domain questpoc --domain-owner 851725253190 --repository poc --region ap-south-1
- 
-      - name: Build and publish package 
-        run: | 
-           python setup.py sdist bdist_wheel 
-           python -m pip upload --repository poc dist/*
-       # env: 
-       #  TWINE_USERNAME: __token__ 
-       #  TWINE_PASSWORD: ${{ steps.codeartifact-token.outputs.token }}
-
+      - name: Publish to CodeArtifact
+        env:
+          AWS_REGION: ap-south-1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          REPOSITORY_NAME: tcp-simulator
+          PACKAGE_NAME: tcp-server-client
+          PACKAGE_VERSION: 1.1.1
+        run: |
+          aws codeartifact login --tool pip --repository poc --domain questpoc --domain-owner 851725253190 --region ap-south-1
+          aws codeartifact push-package-version --repository $REPOSITORY_NAME  --package tcp-server-client --version 1.1.1
