--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,9 @@ jobs:
           #pip install -r requirements.txt
           # Additional setup steps as needed
 
-      - name: Build application
-        run: |
-            python setup.py sdist bdist_wheel  
+      #- name: Build application
+      # run: |
+          # python setup.py sdist bdist_wheel  
           # Commands to build your application
           # For example, compiling code or bundling packages
 
